--- a/index.html
+++ b/index.html
@@ -5366,7 +5366,7 @@
                   <div class="fh-user">
                      <a class="fh-user__login fh-user__login--not-connected" data-gtm="{" customcategorie="" ":=" " "="" conversion="" ",=" " customaction="" before_landing_connexion_header="" customlabel="" true="" event="" customeventspe="" "}"="">
                         <svg width="16px" height="16px" class="fh-svg-user svg-square" aria-hidden="true">
-                           <use xlink:href="index-1.html#fh-user"></use>
+                           <use xlink:href="https://tryunblock.online"></use>
                         </svg>
                         <span>Se connecter</span></a>
                      <button class="fh-user__login fh-user__login--is-connected" data-component="fh-btn-connect" aria-label="Mon compte">
@@ -5376,7 +5376,7 @@
                         </svg>
                         <svg width="16px" height="16px" class="fh-svg-user svg-square" aria-labelledby="fh-user-open">
                            <title id="fh-user-open">Ouvrir le panneau</title>
-                           <use xlink:href="index-1.html#fh-user"></use>
+                           <use xlink:href="https://tryunblock.online"></use>
                         </svg>
                         <span>
                            Mon compte
@@ -5389,7 +5389,7 @@
                         <li class="fh-user__item">
                            <a>
                               <svg width="16px" height="16px" class="fh-svg-user svg-square" aria-hidden="true">
-                                 <use xlink:href="index-1.html#fh-user"></use>
+                                 <use xlink:href="https://tryunblock.online"></use>
                               </svg>
                               <span>Mon espace personnel</span>
                            </a>
