--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
          font-family: noto-serif;
          font-style: normal;
          font-weight: 700;
-         src: local("Noto Serif Bold"), local("NotoSerif-Bold"), url("notoserif-bold.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/notoserif-bold.woff") format("woff")
+         src: local("Noto Serif Bold"), local("NotoSerif-Bold"), url("notoserif-bold.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/notoserif-bold.woff") format("woff")
       }
 
       @font-face {
@@ -191,7 +191,7 @@
          font-family: noto-serif;
          font-style: italic;
          font-weight: 700;
-         src: local("Noto Serif Bold Italic"), local("NotoSerif-BoldItalic"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/notoserif-bolditalic.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/notoserif-bolditalic.woff") format("woff")
+         src: local("Noto Serif Bold Italic"), local("NotoSerif-BoldItalic"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/notoserif-bolditalic.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/notoserif-bolditalic.woff") format("woff")
       }
 
       @font-face {
@@ -199,7 +199,7 @@
          font-family: noto-serif;
          font-style: normal;
          font-weight: 400;
-         src: local("Noto Serif"), local("NotoSerif"), url("notoserif-regular.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/notoserif-regular.woff") format("woff")
+         src: local("Noto Serif"), local("NotoSerif"), url("notoserif-regular.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/notoserif-regular.woff") format("woff")
       }
 
       @font-face {
@@ -207,7 +207,7 @@
          font-family: noto-serif;
          font-style: italic;
          font-weight: 400;
-         src: local("Noto Serif Italic"), local("NotoSerif-Italic"), url("notoserif-italic.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/notoserif-italic.woff") format("woff")
+         src: local("Noto Serif Italic"), local("NotoSerif-Italic"), url("notoserif-italic.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/notoserif-italic.woff") format("woff")
       }
 
       @font-face {
@@ -215,7 +215,7 @@
          font-family: source-sans-pro;
          font-style: italic;
          font-weight: 400;
-         src: local("Source Sans Pro Italic"), local("SourceSansPro-Italic"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-italic.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-italic.woff") format("woff")
+         src: local("Source Sans Pro Italic"), local("SourceSansPro-Italic"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-italic.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-italic.woff") format("woff")
       }
 
       @font-face {
@@ -223,7 +223,7 @@
          font-family: source-sans-pro;
          font-style: normal;
          font-weight: 400;
-         src: local("Source Sans Pro"), local("SourceSansPro"), url("sourcesanspro-regular.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-regular.woff") format("woff")
+         src: local("Source Sans Pro"), local("SourceSansPro"), url("sourcesanspro-regular.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-regular.woff") format("woff")
       }
 
       @font-face {
@@ -231,7 +231,7 @@
          font-family: source-sans-pro;
          font-style: normal;
          font-weight: 600;
-         src: local("Source Sans Pro SemiBold"), local("SourceSansPro-SemiBold"), url("sourcesanspro-semibold.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibold.woff") format("woff")
+         src: local("Source Sans Pro SemiBold"), local("SourceSansPro-SemiBold"), url("sourcesanspro-semibold.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibold.woff") format("woff")
       }
 
       @font-face {
@@ -239,7 +239,7 @@
          font-family: source-sans-pro;
          font-style: italic;
          font-weight: 600;
-         src: local("Source Sans Pro SemiBold Italic"), local("SourceSansPro-SemiBoldItalic"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibolditalic.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibolditalic.woff") format("woff")
+         src: local("Source Sans Pro SemiBold Italic"), local("SourceSansPro-SemiBoldItalic"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibolditalic.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibolditalic.woff") format("woff")
       }
 
       @font-face {
@@ -247,7 +247,7 @@
          font-family: source-sans-pro;
          font-style: normal;
          font-weight: 700;
-         src: local("Source Sans Pro Bold"), local("SourceSansPro-Bold"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-bold.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-bold.woff") format("woff")
+         src: local("Source Sans Pro Bold"), local("SourceSansPro-Bold"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-bold.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-bold.woff") format("woff")
       }
 
       @font-face {
@@ -255,7 +255,7 @@
          font-family: fig-premium-mark;
          font-style: normal;
          font-weight: 400;
-         src: local("Fig Premium Mark"), local("FigPremiumMark"), url("fig-premium-mark.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/fig-premium-mark.woff") format("woff")
+         src: local("Fig Premium Mark"), local("FigPremiumMark"), url("fig-premium-mark.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/fig-premium-mark.woff") format("woff")
       }
 
       html {
@@ -3085,10 +3085,10 @@
       }
    </style>
    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-   <link rel="apple-touch-icon" sizes="180x180" href="https://lactuenunclic.lefigaro.com.co/lander/fr-e--milien----lefigaro-fr---mvt-name-/images/apple-touch-icon.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="s://lactuenunclic.lefigaro.com.co/lander/fr-e--milien----lefigaro-fr---mvt-name-/images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-   <link rel="mask-icon" href="https://lactuenunclic.lefigaro.com.co/lander/fr-e--milien----lefigaro-fr---mvt-name-/images/safari-pinned-tab.svg" color="#163860">
+   <link rel="mask-icon" href="s://lactuenunclic.lefigaro.com.co/lander/fr-e--milien----lefigaro-fr---mvt-name-/images/safari-pinned-tab.svg" color="#163860">
    <link rel="shortcut icon" href="favicon.ico">
       
    
@@ -3099,7 +3099,7 @@
 
 <body class="fig-body page-type--article page-type--premium">
    <a class="fig-skip-main">Aller au contenu</a>
-   <svg xmlns="http://www.w3.org/2000/svg" style="display:none" aria-hidden="true">
+   <svg xmlns="://www.w3.org/2000/svg" style="display:none" aria-hidden="true">
       <defs>
          <symbol id="fig-svg__bracket" viewBox="0 0 24 24">
             <path d="M6.309 21.718c.205.188.475.282.745.282s.539-.094.745-.282l9.892-9.037a.905.905 0 0 0 0-1.362L7.8 2.282a1.125 1.125 0 0 0-1.49 0 .905.905 0 0 0 0 1.361L15.456 12 6.31 20.357a.905.905 0 0 0 0 1.361z">
@@ -3192,7 +3192,7 @@
          font-family: source-sans-pro;
          font-style: normal;
          font-weight: 400;
-         src: local("Source Sans Pro Regular"), local("SourceSansPro-Regular"), url("sourcesanspro-regular.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-regular.woff") format("woff")
+         src: local("Source Sans Pro Regular"), local("SourceSansPro-Regular"), url("sourcesanspro-regular.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-regular.woff") format("woff")
       }
 
       @font-face {
@@ -3200,7 +3200,7 @@
          font-family: source-sans-pro;
          font-style: normal;
          font-weight: 600;
-         src: local("Source Sans Pro SemiBold"), local("SourceSansPro-SemiBold"), url("sourcesanspro-semibold.woff2") format("woff2"), url("urn:scrapbook:download:error:https://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibold.woff") format("woff")
+         src: local("Source Sans Pro SemiBold"), local("SourceSansPro-SemiBold"), url("sourcesanspro-semibold.woff2") format("woff2"), url("urn:scrapbook:download:error:s://nurolid.com/lander/dep-fr/fonts/sourcesanspro-semibold.woff") format("woff")
       }
 
       #fh {
@@ -5171,7 +5171,7 @@
          }
       }
    </style>
-   <svg xmlns="http://www.w3.org/2000/svg" style="display:none;">
+   <svg xmlns="://www.w3.org/2000/svg" style="display:none;">
       <defs>
          <symbol id="fh-close" viewBox="0 0 24 24">
             <path d="M13.232 12l7.513 7.513a.871.871 0 0 1-1.232 1.232L12 13.232l-7.513 7.513a.871.871 0 0 1-1.232-1.232L10.768 12 3.255 4.487a.871.871 0 1 1 1.232-1.232L12 10.768l7.513-7.513a.871.871 0 1 1 1.232 1.232L13.232 12z">
@@ -5196,7 +5196,7 @@
                   <a class="fh-subscribe fh-subscribe--mob" data-gtm="{" customcategorie="" ":=" " "="" conversion="" ",=" " customaction="" before_landing_premium_menu="" customlabel="" true="" event="" customeventspe="" "}"="" referrerpolicy="unsafe-url"> Abonnez-vous <span>0,99€ le
                         premier mois</span></a>
                   <a class="fh-search">
-                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="svg-square" aria-hidden="true">
+                     <svg xmlns="://www.w3.org/2000/svg" viewBox="0 0 24 24" class="svg-square" aria-hidden="true">
                         <path d="M15.043 15.93a7.326 7.326 0 1 1 .888-.888l4.885 4.886a.628.628 0 0 1-.888.888l-4.885-4.885zm-4.717.465a6.07 6.07 0 1 0 0-12.14 6.07 6.07 0 0 0 0 12.14z">
                         </path>
                      </svg>
@@ -5206,7 +5206,7 @@
                      <div class="fh-menuplus__title">Notre application</div>
                      <a class="fh-mobileapp__container">
                         <span class="fh-mobileapp__img">
-                           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" width="40" height="40">
+                           <svg xmlns="://www.w3.org/2000/svg" viewBox="0 0 40 40" width="40" height="40">
                               <g fill="none" fill-rule="evenodd">
                                  <path d="M7.692 0h24.616c2.675 0 3.645.278 4.623.801a5.452 5.452 0 0 1 2.268 2.268c.523.978.801 1.948.801 4.623v24.616c0 2.675-.278 3.645-.801 4.623a5.452 5.452 0 0 1-2.268 2.268c-.978.523-1.948.801-4.623.801H7.692c-2.675 0-3.645-.278-4.623-.801A5.452 5.452 0 0 1 .801 36.93C.278 35.953 0 34.983 0 32.308V7.692c0-2.675.278-3.645.801-4.623A5.452 5.452 0 0 1 3.07.801C4.047.278 5.017 0 7.692 0Z" fill="#163860"></path>
                                  <path d="M13.171 10.875H34v6.126h-5.084v-1.026a.975.975 0 0 0-.323-.767 1.034 1.034 0 0 0-.81-.259h-4.626v3.445h4.272v3.704h-4.272v2.771c0 .763.351 1.074 1.357 1.074h1.62V30H13.172v-4.064h1.713a.807.807 0 0 0 .605-.221.762.762 0 0 0 .235-.586v-9.181c0-.578-.098-1.002-.914-1.002H13.17v-4.071Z" fill="#FFF"></path>
@@ -5218,7 +5218,7 @@
                               réel</span><br><span class="fh-mobileapp__subtitle">avec l'application Le
                               Figaro</span></span>
                         <span class="fh-mobileapp__arrow">
-                           <svg width="6" height="10" xmlns="http://www.w3.org/2000/svg">
+                           <svg width="6" height="10" xmlns="://www.w3.org/2000/svg">
                               <path d="M3.94 5L.47 1.53A.75.75 0 011.53.47l4 4a.75.75 0 010 1.06l-4 4A.75.75 0 01.47 8.47L3.94 5z">
                               </path>
                            </svg>
@@ -5228,8 +5228,8 @@
                   <div class="fh-kw">
                      <p class="fh-menuplus__title fh-menuplus__title--edito">Rubriques et services du Figaro</p>
                      <ul class="fh-kw__list">
-                        <li class="fh-kw__item"><a class="fh-kw__lk"href="https://curt.link/emQrq">Guerre en Ukraine</a></li>
-                        <li class="fh-kw__item"><a class="fh-kw__lk"href="https://curt.link/emQrq">Politique</a></li>
+                        <li class="fh-kw__item"><a class="fh-kw__lk"href="s://curt.link/emQrq">Guerre en Ukraine</a></li>
+                        <li class="fh-kw__item"><a class="fh-kw__lk"href="s://curt.link/emQrq">Politique</a></li>
                         <li class="fh-kw__item"><a class="fh-kw__lk"href="https://curt.link/emQrq">International</a></li>
                         <li class="fh-kw__item"><a class="fh-kw__lk"href="https://curt.link/emQrq">Société</a></li>
                         <li class="fh-kw__item"><a class="fh-kw__lk"href="https://curt.link/emQrq">Vox</a></li>
